Replaced JSON request with Path params
